<resources>
    <string name="app_name">SharePhotoApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="have_an_account">Have an account?</string>
    <string name="pistagram">Pistagram</string>
    <string name="home">home</string>
    <string name="share">share</string>
    <string name="settings">settings</string>
    <string name="sign_out">Sign Out</string>
    <string name="select_photo">Select Photo</string>
    <string name="caption">Caption</string>
    <string name="user_email">User Email</string>
    <string name="caption">Caption</string>
</resources>