<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.RegisterFragment"
    android:orientation="vertical">

    <!-- Toolbar -->

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/pistagram"
            style="@style/Toolbar.TitleText"/>

    </androidx.appcompat.widget.Toolbar>

    <!-- Toolbar -->

    <EditText
        android:id="@+id/email_fragment_register"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="200dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/custom_edit_text"
        android:drawableStart="@drawable/custom_email_icon"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:textSize="14sp"
        />

    <EditText
        android:id="@+id/password_fragment_register"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/custom_edit_text"
        android:drawableStart="@drawable/custom_lock_icon"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="14sp"
        />

    <Button
        android:id="@+id/register_btn_fragment_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:text="@string/sign_up"
        android:ems="8"
        android:backgroundTint="@color/black"
        />

    <TextView
        android:id="@+id/have_an_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/have_an_account"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_gravity="center"/>

</LinearLayout>