<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ShareFragment"
    android:orientation="vertical">

    <!-- Toolbar -->

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <TextView
            android:id="@+id/title"
            style="@style/Toolbar.TitleText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/pistagram" />

    </androidx.appcompat.widget.Toolbar>

    <!-- Toolbar -->

    <ImageView
        android:id="@+id/selected_photo_image_view"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/select_photo_btn_fragment_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        android:textColor="@color/black"
        android:text="@string/select_photo"/>

    <EditText
        android:id="@+id/photo_caption_fragment_share"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:paddingStart="16dp"
        android:hint="@string/caption"
        android:background="@drawable/custom_edit_text"/>

    <Button
        android:id="@+id/share_photo_btn_fragment_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/black"
        android:ems="10"
        android:text="@string/share"/>

</LinearLayout>